--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       matrix:
         # build and publish in parallel: linux/amd64
-        goos: [linux darwin windows]
-        goarch: [amd64 amd64 amd64]
+        goos: [linux, darwin, windows]
+        goarch: [amd64]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@1.18
