--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         # build and publish in parallel: linux/amd64
-        goos: [linux, windows, darwin]
+        goos: [linux]
         goarch: ["386", amd64, arm64]
     steps:
       - uses: actions/checkout@v3
