--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         # build and publish in parallel: linux/amd64
         goos: [linux, windows, darwin]
-        goarch: ["386", amd64, arm64]
+        goarch: [amd64, arm64]
     steps:
       - uses: actions/checkout@v3
       - uses: wangyoucao577/go-release-action@v1.28
